INTYG-3840: Lagt till en enum komponent

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -34,6 +34,7 @@
 @import 'components/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
 @import 'components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
 @import 'components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
+@import 'components/unified-view/components/uvEnumValue/uvEnumValue.directive.scss';
 @import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
 @import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
 @import 'components/unified-view/components/uvKodverkValue/uvKodverkValue.directive.scss';
