--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -9,14 +9,14 @@
       <p>
       <div class="mi-text" message key="luae_fs.label.pageingress"></div>
 
-      <div collapse="!isCollapsed1" class="collapse mi-text">
+      <div uib-collapse="!isCollapsed1" class="collapse mi-text">
         <div message key="luae_fs.label.pagedescription.sendcertificate.header"></div>
         <div message key="luae_fs.label.pagedescription.sendcertificate"></div>
         <div message key="luae_fs.label.pagedescription.save.or.print.certificate.header"></div>
         <div message key="luae_fs.label.pagedescription.save.or.print.certificate"></div>
         <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
            title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
-        <div collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
+        <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
                                                                                   key="luae_fs.helptext.readpdfhelp"></span>
         </div>
         <div message key="luae_fs.label.pagedescription.sickness.benefit.header"></div>
