INTYG-3827: Anpassad utskrift FK7263 - feature complete, exakt utseende på fk7263 ännu ej klart

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
@@ -17,6 +17,19 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
+.customize-pdf-header {
+  padding:10px 0px;
+}
+
+.selectable-field-list {
+  padding:10px 0;
+}
+
+.customize-pdf-body {
+  padding-top:10px;
+}
+
+
 //These variables should be extracted and imported
 //colors
 $color-alto-approx: #ddd;
