--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableCategoryWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableCategoryWrapper.directive.scss
@@ -2,7 +2,8 @@ selectable-category-wrapper {
   display: block;
 
   h2.title {
-    background-color: #43799a;;
+    font-size: 18px;
+    background-color: #43799a;
     color: #fff;
     padding: 15px;
     margin: 0;
