--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.scss
@@ -7,27 +7,38 @@
   box-shadow: 0 3px 5px #ddd;
   border-top: 1px #eee solid;
 
+  .title {
+    margin-top: 20px;
+  }
+  table>tbody>tr>th {
+    border-top:0;
+  }
+  ul {
+    padding-left: 15px;
+  }
+
   h3, h4, label {
     color: #333;
 
   }
 
+
   h3 {
     font-size: 16px;
-    padding-top: 30px;
-    margin: 0;;
+    padding-top: 0px;
+    margin: 0;
   }
 
   h4 {
     font-size: 14px;
-    padding: 3px 0 5px 0;
+    padding: 0;
     margin: 0;
     color: #666;
 
   }
   .value-part {
     h4 {
-      margin: 5px 0 0 0;
+      margin: 8px 0 0 0;
 
     }
   }
@@ -38,7 +49,7 @@
 
   .inclusion {
     text-align: right;
-    margin-top: 30px;
+    margin-top: 20px;
 
     .mandatory {
       font-weight: normal;
