--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step2.body.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step2.body.html
@@ -14,7 +14,7 @@
       <!-- List any excluded fields -->
       <div ng-if="customizeViewstate.getUnselected().length > 0">
         <h1>Information din arbetsgivare INTE kan se</h1>
-        <p class="alert alert-info">
+        <p id="warn-for-unselected-important-field" class="alert alert-info" ng-if="customizeViewstate.getUnselected(true).length > 0">
           <i class="icon icon-attention-circled"></i>
           <span message key="modules.customize.message.warning"></span>
         </p>
