INTYG-3826: Bytt till Button för bättre styling.

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step1.body.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/step1.body.html
@@ -19,9 +19,9 @@
           <i class="icon icon-cancel"></i><span message key="lisjp.button.cancel"></span>
         </button>
 
-        <a ui-sref="lisjp-customize.step2" id="goto-step-2" class="btn btn-primary">
+        <button ui-sref="lisjp-customize.step2" id="goto-step-2" class="btn btn-primary">
           <i class="icon icon-right-1"></i><span message key="lisjp.customize.step.1.next"></span>
-        </a>
+        </button>
 
       </p>
     </div>
