--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step1.body.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step1.body.html
@@ -19,9 +19,9 @@
           <i class="icon icon-cancel"></i><span message key="fk7263.button.cancel"></span>
         </button>
 
-        <a ui-sref="fk7263-customize.step2" id="goto-step-2" class="btn btn-primary">
+        <button ui-sref="fk7263-customize.step2" id="goto-step-2" class="btn btn-primary">
           <i class="icon icon-right-1"></i><span message key="fk7263.customize.step.1.next"></span>
-        </a>
+        </button>
 
       </p>
     </div>
