--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step2.body.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step2.body.html
@@ -29,14 +29,14 @@
     <div class="col-xs-12 text-right">
 
       <!-- Back -->
-      <a ui-sref="fk7263-customize.step1" id="goto-step-1" class="btn btn-secondary">
+      <button ui-sref="fk7263-customize.step1" id="goto-step-1" class="btn btn-secondary">
         <i class="icon icon-pencil"></i><span message key="fk7263.customize.change"></span>
-      </a>
+      </button>
 
       <!-- Next -->
-      <a ui-sref="fk7263-customize.step3" id="goto-step-3" class="btn btn-primary">
+      <button ui-sref="fk7263-customize.step3" id="goto-step-3" class="btn btn-primary">
         <i class="icon icon-right-1"></i><span message key="fk7263.customize.step.2.next"></span>
-      </a>
+      </button>
 
     </div>
 
