INTYG-4059: Storstädning av intygsmoduldernas /minaintyg content. Rensat oanvända resourceskeys, direktiv och css.

--- a/fk/luae_na/src/main/resources/META-INF/resources/webjars/luae_na/minaintyg/views/view-cert.html
+++ b/fk/luae_na/src/main/resources/META-INF/resources/webjars/luae_na/minaintyg/views/view-cert.html
@@ -36,7 +36,7 @@
 <div class="container">
   <div class="row-fluid">
 
-    <div mi-spinner label="luae_na.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
       <mi-certificate-action-buttons
         cert-model="cert"
