--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/customize-pdf.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/customize-pdf.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <!-- Content -->
-  <div mi-spinner label="fk7263.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+  <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
     <div ui-view="body" autoscroll></div>
   </div>
 </div>
