--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -44,7 +44,7 @@
 <div class="container">
   <div class="row-fluid">
 
-    <div mi-spinner label="lisjp.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
       <mi-certificate-action-buttons
           cert-model="cert"
