--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -29,7 +29,7 @@
       </p>
       <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
               data-toggle="collapse">
-        <span message key="luae_fs.label.status.{{!isCollapsed1}}"></span>
+        <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
     <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
@@ -42,14 +42,13 @@
 <div class="container">
   <div class="row-fluid">
 
-    <div mi-spinner label="luae_fs.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
       <mi-certificate-action-buttons
           cert-model="cert"
           on-send="send(cert)"
           enable-archive="true"
-          enable-print="true"
-          on-customize-pdf="customizeCertificate()">
+          enable-print="true">
 
       </mi-certificate-action-buttons>
 
