--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step1.body.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/step1.body.html
@@ -16,7 +16,7 @@
       <p>
         <button type="button" id="cancelCertificateCustomizationBtn" ng-click="backToViewCertificate()"
                 class="btn btn-third">
-          <i class="icon icon-cancel"></i><span message key="fk7263.button.cancel"></span>
+          <i class="icon icon-cancel"></i><span message key="fk7263.common.cancel"></span>
         </button>
 
         <button ui-sref="fk7263-customize.step2" id="goto-step-2" class="btn btn-primary">
