--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -45,7 +45,7 @@
 
       <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
               data-toggle="collapse">
-        <span message key="fk7263.label.status.{{!isCollapsed1}}"></span>
+        <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
 
@@ -58,7 +58,7 @@
 <div class="container">
   <div class="row-fluid">
 
-    <div mi-spinner label="fk7263.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
       <mi-certificate-action-buttons
           cert-model="cert"
