--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -46,11 +46,11 @@
       <br>
       <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
               data-toggle="collapse">
-        <span message key="ts-bas.label.status.{{!isCollapsed1}}"></span>
+        <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
     <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-      <latest-events cert-id="{{cert.id}}" statuses="cert.status"></latest-events>
+      <latest-events cert-id="{{cert.id}}" statuses="certMeta.statuses"></latest-events>
     </div>
   </div>
 </mi-page-head>
@@ -58,7 +58,7 @@
   <div class="row-fluid">
 
     <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
-    <div mi-spinner label="ts-bas.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div mi-spinner label="modules.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
       <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true"
                                      enable-print="true"></mi-certificate-action-buttons>
