--- a/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
+++ b/fk/luae_fs/src/main/resources/META-INF/resources/webjars/luae_fs/minaintyg/views/view-cert.html
@@ -2,37 +2,30 @@
   <mi-breadcrumb></mi-breadcrumb>
   <!-- Content -->
   <div class="row">
-    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7">
+    <div class="col-xs-12 col-sm-7">
       <h1 ng-focus="pagefocus" tabindex="-1">
-        <span id="viewCertificateHeader" message key="luae_fs.label.pagetitle"></span>
+        <span id="viewCertificateHeader" message key="modules.page-header.view-intyg.page-title"></span>
       </h1>
-      <p>
-      <div class="mi-text" message key="luae_fs.label.pageingress"></div>
 
-      <div uib-collapse="!isCollapsed1" class="collapse mi-text">
-        <div message key="luae_fs.label.pagedescription.sendcertificate.header"></div>
-        <div message key="luae_fs.label.pagedescription.sendcertificate"></div>
-        <div message key="luae_fs.label.pagedescription.save.or.print.certificate.header"></div>
-        <div message key="luae_fs.label.pagedescription.save.or.print.certificate"></div>
-        <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
-           title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
-        <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
-                                                                                  key="luae_fs.helptext.readpdfhelp"></span>
-        </div>
-        <div message key="luae_fs.label.pagedescription.sickness.benefit.header"></div>
-        <div message key="luae_fs.label.pagedescription.sickness.benefit"></div>
-        <div message key="luae_fs.label.pagedescription.error.in.certificate.header"></div>
-        <div message key="luae_fs.label.pagedescription.error.in.certificate"></div>
-        <div message key="luae_fs.label.pagedescription.archive.header"></div>
-        <div message key="luae_fs.label.pagedescription.archive"></div>
+
+      <div>
+        <span message key="luae_fs.label.pageingress"></span>
       </div>
-      </p>
-      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
+
+      <div uib-collapse="!isCollapsed1" class="collapse">
+        <span message key="modules.page-header.info.select-recipients-and-send"></span>
+        <span message key="modules.page-header.info.customize-pdf"></span>
+        <span message key="modules.page-header.info.download-pdf"></span>
+        <span message key="modules.page-header.info.archive"></span>
+      </div>
+
+      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn btn-link btn-link-chevron"
               data-toggle="collapse">
         <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
+
     </div>
-    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+    <div class="col-xs-12 col-sm-5">
       <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
     </div>
   </div>
