--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/views/view-cert.html
@@ -5,46 +5,21 @@
   <div class="row">
     <div class="col-xs-12 col-sm-7">
       <h1 ng-focus="pagefocus" tabindex="-1">
-        <span id="viewCertificateHeader" message key="fk7263.label.pagetitle"></span>
+        <span id="viewCertificateHeader" message key="modules.page-header.view-intyg.page-title"></span>
       </h1>
+
       <div>
-        <span class="mi-text" message key="fk7263.label.pageingress"></span>
+        <span message key="fk7263.label.pageingress"></span>
       </div>
 
       <div uib-collapse="!isCollapsed1" class="collapse">
-        <h3>
-          <span message key="fk7263.label.pagedescription.sendcertificate.header"></span>
-        </h3>
-        <span message key="fk7263.label.pagedescription.sendcertificate"></span>
-
-        <h3>
-          <span message key="fk7263.label.pagedescription.save.or.print.certificate.header"></span>
-        </h3>
-        <span message key="fk7263.label.pagedescription.save.or.print.certificate"></span>
-        <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
-           title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
-        <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px">
-          <span message key="fk7263.helptext.readpdfhelp"></span>
-        </div>
-
-        <h3>
-          <span message key="fk7263.label.pagedescription.sickness.benefit.header"></span>
-        </h3>
-        <span message key="fk7263.label.pagedescription.sickness.benefit"></span>
-
-        <h3>
-          <span message key="fk7263.label.pagedescription.error.in.certificate.header"></span>
-        </h3>
-        <span message key="fk7263.label.pagedescription.error.in.certificate"></span>
-
-        <h3>
-          <span message key="fk7263.label.pagedescription.archive.header"></span>
-        </h3>
-        <span message key="fk7263.label.pagedescription.archive"></span>
+        <span message key="modules.page-header.info.select-recipients-and-send"></span>
+        <span message key="modules.page-header.info.customize-pdf"></span>
+        <span message key="modules.page-header.info.download-pdf"></span>
+        <span message key="modules.page-header.info.archive"></span>
       </div>
 
-      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
-              data-toggle="collapse">
+      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn btn-link btn-link-chevron" data-toggle="collapse">
         <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
