--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/minaintyg/views/view-cert.html
@@ -22,39 +22,33 @@
   <mi-breadcrumb></mi-breadcrumb>
   <!-- Content -->
   <div class="row">
-    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 mi-text">
+    <div class="col-xs-12 col-sm-7">
       <h1>
-        <message id="viewCertificateHeader" key="ts-diabetes.label.pagetitle" />
+        <span id="viewCertificateHeader" message key="modules.page-header.view-intyg.page-title"></span>
       </h1>
-      <p></p>
-      <div class="mi-text" message key="ts-diabetes.label.pageingress"></div>
-      <div uib-collapse="!isCollapsed1" class="collapse mi-text">
-        <div message key="ts-diabetes.label.pagedescription.sendcertificate.header"></div>
-        <div message key="ts-diabetes.label.pagedescription.sendcertificate"></div>
-        <div message key="ts-diabetes.label.pagedescription.save.or.print.certificate.header"></div>
-        <div message key="ts-diabetes.label.pagedescription.save.or.print.certificate"></div>
-        <a class="glyphicon glyphicon-question-sign more-info" ng-click="isCollapsedPDF = !isCollapsedPDF"
-           title="{{messageService.getProperty('common.title.helptext.moreinfo')}}"></a>
-        <div uib-collapse="!isCollapsedPDF" class="well well-sm margin-top-5px"><span message
-                                                                                      key="ts-diabetes.helptext.readpdfhelp"></span>
-        </div>
-        <div message key="ts-diabetes.label.pagedescription.error.in.certificate.header"></div>
-        <div message key="ts-diabetes.label.pagedescription.error.in.certificate"></div>
-        <div message key="ts-diabetes.label.pagedescription.archive.header"></div>
-        <div message key="ts-diabetes.label.pagedescription.archive"></div>
+
+      <div>
+        <span message key="ts-diabetes.label.pageingress"></span>
       </div>
-      <br>
-      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
+
+      <div uib-collapse="!isCollapsed1" class="collapse">
+        <span message key="modules.page-header.info.select-recipients-and-send.ts"></span>
+        <span message key="modules.page-header.info.download-pdf"></span>
+        <span message key="modules.page-header.info.archive"></span>
+      </div>
+
+      <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn btn-link btn-link-chevron"
               data-toggle="collapse">
         <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
 
     </div>
-    <div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+    <div class="col-xs-12 col-sm-5">
       <latest-events cert-id="{{cert.id}}" statuses="certMeta.statuses"></latest-events>
     </div>
   </div>
 </mi-page-head>
+
 <div class="container">
   <div class="row-fluid">
 
