--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/minaintyg/css/fk7263.scss
@@ -18,7 +18,7 @@
  */
 
 .customize-pdf-header {
-  padding:10px 0px;
+  padding:10px 0;
 }
 
 .selectable-field-list {
@@ -30,3 +30,5 @@
 }
 
 @import "../js/directives/fkList/fkList.directive";
+@import "../js/directives/fkUvBooleanValue/fkUvBooleanValue.directive";
+@import "../js/directives/fkUvTable/fkUvTable.directive";
