--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_bootstrap-overrides.scss
@@ -163,8 +163,10 @@ $font-3: sans-serif;
 }
 
 .buttonbar {
+  padding-top: 10px;
+
   .btn {
-    margin: 5px 5px 0 0;
+    margin: 0 5px 0 0;
   }
 
   .checkbox-inline {
