INTYG-4124: Texträttning obligatorisk info markering i anpassa flöde

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/selectableFieldWrapper.directive.scss
@@ -103,18 +103,8 @@
       font-size: 18px;
     }
   }
+
+  .asterix {
+    color: red;
+  }
 }
-
-.selectable-field-wrapper .title.summary {
-
-}
-
-
-
-
-
-
-
-
-
-
