INTYG-4121: Texträttning fishbone-steg anpassat flöde (ändrat krav)

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/miFishbone.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/customize-pdf/miFishbone.directive.scss
@@ -21,6 +21,7 @@ mi-fishbone {
     font-size: 14px;
     color: #707070;
     background: $background-inactive;
+    min-width: 170px;
 
     &.current {
       background: $background-current;
