--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.scss
@@ -22,6 +22,7 @@
   border-radius: 4px 4px;
   background-color: #EFF8F9;
   color: #004563;
+  margin: 3px 0 10px 0;
   padding: 10px 15px;
   max-height: 13em;
   overflow-y: auto;
