--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form6a-7-11.html
@@ -4,8 +4,8 @@
 
         <!-- 11 -->
         <div>Resor till och från arbetet med annat färdmedel än normalt kan göra det möjligt för patienten
-            att återgå i arbete</label> <span wc-help-mark
-                                              field-help-text="fk7263.helptext.rekommendationer.resor"></span>
+            att återgå i arbete</label> <span wc-help-chevron
+                                              help-text-key="fk7263.helptext.rekommendationer.resor"></span><span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.resor"></span>
         </div>
 
         <div class="form-group form-inline" id="rekommendationRessattRadioGroup">
@@ -27,8 +27,8 @@
                                                ng-model="model.rekommendationKontaktArbetsformedlingen"
                                                ng-change="validate()">
                     Patienten
-                    bör komma i kontakt med arbetsförmedlingen</label> <span wc-help-mark
-                                                                             field-help-text="fk7263.helptext.rekommendationer.arbetsformedlingen"></span>
+                    bör komma i kontakt med arbetsförmedlingen</label> <span wc-help-chevron help-text-key="fk7263.helptext.rekommendationer.arbetsformedlingen"></span>
+                <span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.arbetsformedlingen"></span>
             </div>
             <div class="form-group form-inline">
                 <label class="checkbox"><input type="checkbox" id="rekommendationKontaktForetagshalsovard"
@@ -36,16 +36,16 @@
                                                ng-model="model.rekommendationKontaktForetagshalsovarden"
                                                ng-change="validate()">
                     Patienten
-                    bör komma i kontakt med företagshälsovården</label> <span wc-help-mark
-                                                                              field-help-text="fk7263.helptext.rekommendationer.foretagshalsovarden"></span>
+                    bör komma i kontakt med företagshälsovården</label> <span wc-help-chevron help-text-key="fk7263.helptext.rekommendationer.foretagshalsovarden"></span>
+                <span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.foretagshalsovarden"></span>
             </div>
             <div class="form-group form-inline">
                 <label class="checkbox"><input type="checkbox" id="rekommendationOvrigt"
                                                name="recommendationsToFk.other"
                                                ng-change="onOvrigtChange(); validate()"
                                                ng-model="model.rekommendationOvrigtCheck"> Övrigt (ange
-                    vad <span class="required">*</span>)</label><span wc-help-mark
-                                      field-help-text="fk7263.helptext.rekommendationer.ovrigt"></span>
+                    vad <span class="required">*</span>)</label><span wc-help-chevron help-text-key="fk7263.helptext.rekommendationer.ovrigt"></span>
+                    <span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.ovrigt"></span>
 
 
                 <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('rekommendationovrigt')">
@@ -55,15 +55,16 @@
                                class='form-control maxwidth' ng-model="model.rekommendationOvrigt" maxlength="80"
                                wc-maxlength
                                ng-blur="validate()">
-
                     </div>
                 </wc-validation-wrapper>
             </div>
 
             <!-- 7 -->
             <span id="recommendationsToFkReabInQuestionRadioGroup">
-                  <h4 class="inline-block">Är arbetslivsinriktad rehabilitering aktuell? <span wc-help-mark
-                                                                                               field-help-text="fk7263.helptext.rekommendationer.arbetslivsinriktad-rehabilitering"></span></h4>
+                  <h4 class="inline-block">Är arbetslivsinriktad rehabilitering aktuell?
+                      <span wc-help-chevron help-text-key="fk7263.helptext.rekommendationer.arbetslivsinriktad-rehabilitering"></span>
+                  </h4>
+                  <span wc-help-chevron-text help-text-key="fk7263.helptext.rekommendationer.arbetslivsinriktad-rehabilitering"></span>
 
                   <!-- Rehab -->
                   <!-- YES -->
@@ -86,8 +87,7 @@
                   <div class="form-group">
                       <label class="radio-inline"><input type="radio" name="recommendationsToFkReabInQuestion" group="group3"
                                                          value="GAREJ" ng-model="model.rehab" id="garej"
-                                                         ng-change="model.setrehab('GAREJ'); validate()"> Går inte
-                          att bedöma</label>
+                                                         ng-change="model.setrehab('GAREJ'); validate()"> Går inte att bedöma</label>
                   </div>
             </span>
         </div>
