--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/views/utkast/form/form8b.html
@@ -15,8 +15,8 @@
                                           name="capacityForWork.actualWorkingHoursPerWeek" value=""
                                           class='short control-element form-control' maxlength="5"
                                           ng-model="model.tjanstgoringstid"
-                                          ng-blur="validate()"> <span>timmar/vecka</span> <span
-            wc-help-mark field-help-text="fk7263.helptext.arbetsformaga.faktisk-tjanstgoringstid"></span>
+                                          ng-blur="validate()"> <span>timmar/vecka</span> <span wc-help-chevron help-text-key="fk7263.helptext.arbetsformaga.faktisk-tjanstgoringstid"></span>
+          <span wc-help-chevron-text help-text-key="fk7263.helptext.arbetsformaga.faktisk-tjanstgoringstid"></span>
         </div>
 
         <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('arbetsformaga')">
