INTYG-3764: chevrons ts-intyg.

--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form3.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form3.html
@@ -88,15 +88,17 @@
           <span message key="ts-diabetes.helptext.synfunktioner.synskarpa"></span>
         </div>
 
-        <table class="table table-form">
+        <table class="table table-form table-4ths help-th">
           <tr>
             <th></th>
             <th>Utan korrektion
               <span ng-if="viewState.intygModel.syn.separatOgonlakarintyg === false"><span class="required">*</span></span>
-              <span wc-help-mark field-help-text="ts-diabetes.helptext.synfunktioner.utan-korrektion"></span>
+              <span wc-help-chevron help-text-key="ts-diabetes.helptext.synfunktioner.utan-korrektion" />
+              <span wc-help-chevron-text help-text-key="ts-diabetes.helptext.synfunktioner.utan-korrektion" />
             </th>
             <th>Med korrektion
-              <span wc-help-mark field-help-text="ts-diabetes.helptext.synfunktioner.med-korrektion"></span>
+              <span wc-help-chevron help-text-key="ts-diabetes.helptext.synfunktioner.med-korrektion" />
+              <span wc-help-chevron-text help-text-key="ts-diabetes.helptext.synfunktioner.med-korrektion" />
             </th>
           </tr>
           <tr>
