--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/wcHelpChevronText.directive.scss
@@ -28,3 +28,10 @@
   overflow-y: auto;
   max-width: 700px;
 }
+
+.help-th {
+  .wc-help-chevron__text{
+    font-weight: normal;
+    max-width: 250px;
+  }
+}
