--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form1.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form1.html
@@ -69,14 +69,18 @@
           <span dynamic-label key="FRG_8.INF"></span>
         </div>
 
-        <table class="table table-form">
+        <table class="table table-form table-4ths help-th">
           <tr>
             <th></th>
-            <th><span message key="ts-bas.label.syn.utan-korrektion"></span> <span class="required">*</span> <span wc-help-mark
-                                                                                  field-help-text="ts-bas.helptext.synfunktioner.utan-korrektion" />
+            <th><span message key="ts-bas.label.syn.utan-korrektion"></span> <span class="required">*</span> <span wc-help-chevron
+                                                                                  help-text-key="ts-bas.helptext.synfunktioner.utan-korrektion" />
+              <span wc-help-chevron-text
+                    help-text-key="ts-bas.helptext.synfunktioner.utan-korrektion" />
             </th>
-            <th><span message key="ts-bas.label.syn.med-korrektion"></span><span wc-help-mark
-                                                                                 field-help-text="ts-bas.helptext.synfunktioner.med-korrektion" />
+            <th><span message key="ts-bas.label.syn.med-korrektion"></span><span wc-help-chevron
+                                                                                 help-text-key="ts-bas.helptext.synfunktioner.med-korrektion" />
+              <span wc-help-chevron-text
+                    help-text-key="ts-bas.helptext.synfunktioner.med-korrektion" />
             </th>
             <th><span message key="ts-bas.label.syn.kontaktlinster"></span></th>
           </tr>
