--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/intention.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/intention.html
@@ -7,7 +7,8 @@
 
   <p>
     <span dynamic-label key="FRG_1.RBK"></span>
-    <span wc-help-mark field-dynamic-help-text="FRG_1.HLP"></span>
+    <span wc-help-chevron help-text-key="FRG_1.HLP" />
+    <span wc-help-chevron-text help-text-key="FRG_1.HLP" />
   </p>
 
   <p><span dynamic-label key="FRG_1.2.RBK"></span></p>
