INTYG-3764: Genomgång av nu obsolete field-dynamic-help-text

--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form1.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form1.html
@@ -1,7 +1,7 @@
 <a id="anchor-diabetes" name="anchor.diabetes" xmlns="http://www.w3.org/1999/html"></a>
 <div wc-field
      field-dynamic-label="KAT_1.RBK"
-     field-dynamic-help-text="KAT_1.HLP"
+     field-help-text="KAT_1.HLP"
      field-has-errors="viewState.common.validation.messagesGrouped.diabetes"
      id="allmantForm">
   <div class="form-group" wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('observationsperiod')">
