--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form4.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form4.html
@@ -1,7 +1,7 @@
 <a id="anchor-bedomning" name="anchor.bedomning"></a>
 <div wc-field
      field-dynamic-label="KAT_4.RBK"
-     field-dynamic-help-text="KAT_4.HLP"
+     field-help-text="KAT_4.HLP"
      field-help-text="ts-diabetes.helptext.intyget-avser"
      field-has-errors="viewState.common.validation.messagesGrouped.bedomning"
      id="bedomningForm">
