--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/intention.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/intention.html
@@ -1,7 +1,7 @@
 <a id="anchor-intygavser" name="anchor.intygavser"></a>
 <div wc-field
      field-dynamic-label="KAT_99.RBK"
-     field-dynamic-help-text="KAT_99.HLP"
+     field-help-text="KAT_99.HLP"
      field-has-errors="viewState.common.validation.messagesGrouped.intygavser"
      field-required="true"
      id="intygetAvserForm">
