--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form2.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form2.html
@@ -1,7 +1,7 @@
 <a id="anchor-hypoglykemier" name="anchor.hypoglykemier"></a>
 <div wc-field
      field-dynamic-label="KAT_2.RBK"
-     field-dynamic-help-text="KAT_2.HLP"
+     field-help-text="KAT_2.HLP"
      field-has-errors="viewState.common.validation.messagesGrouped.hypoglykemier"
      id="hypoglykemierForm">
   <table class="table table-form">
