--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form3.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form3.html
@@ -1,7 +1,7 @@
 <a id="anchor-syn" name="anchor.syn"></a>
 <div wc-field
      field-dynamic-label="KAT_3.RBK"
-     field-dynamic-help-text="KAT_3.HLP"
+     field-help-text="KAT_3.HLP"
      field-has-errors="viewState.common.validation.messagesGrouped.syn"
      ng-form
      name="synForm" id="synForm">
