--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form5.html
@@ -1,4 +1,4 @@
-<div wc-field field-dynamic-label="KAT_5.RBK" field-dynamic-help-text="KAT_5.HLP">
+<div wc-field field-dynamic-label="KAT_5.RBK" field-help-text="KAT_5.HLP">
   <h5>
     <span dynamic-label key="FRG_32.RBK"></span>
   </h5>
