--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form6.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form6.html
@@ -1,4 +1,4 @@
-<div wc-field field-dynamic-label="KAT_6.RBK" field-dynamic-help-text="KAT_6.HLP">
+<div wc-field field-dynamic-label="KAT_6.RBK" field-help-text="KAT_6.HLP">
   <h5>
     <span dynamic-label key="FRG_34.RBK"></span>
   </h5>
