--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/identity.html
@@ -2,7 +2,7 @@
 <a id="anchor-identitet" name="anchor.identitet"></a>
 <div wc-field
      field-dynamic-label="KAT_100.RBK"
-     field-dynamic-help-text="KAT_100.HLP"
+     field-help-text="KAT_100.HLP"
      field-has-errors="viewState.common.validation.messagesGrouped.identitet"
      field-required="true"
      id="identitetForm">
